	  current and current->data aren't NULL. (DLR)
  disable_extended_input()
	- Disable extended output processing as well as extended input
	  processing, and rename to disable_extended_io(). (DLR)
- nano.h:
	- Add macro charset(), a wrapper that calls memset(). (DLR)
	- Readd #defines for the isblank() and iswblank() equivalents.
	  (DLR)
- rcfile.c:
  color_to_int()
	- Since colorname's being NULL is handled elsewhere now, assert
	  that it isn't NULL at the beginning of the function. (DLR)
  parse_colors()
	- Properly parse a background color without a foreground color.
	  (DLR)
	- Properly generate an error if we get a color directive without
	  a regex string. (DLR)
  parse_rcfile()
	- Properly generate an error if we get an invalid multibyte
	  string for an option, instead of working around it. (DLR)
	- Use has_blank_mbchars() to check for blank characters in the
	  "punct" and "brackets" options, and clarify the error message
	  displayed when we find blank characters. (DLR)
- search.c:
  do_gotoline()
	- Properly show an error message if we try to go to line 0,
	  since the first line in the file is 1. (DLR)
	- Start the search for a line from fileage instead of current
	  (again). (DLR)
  replace_regexp()
	- Rename variable create_flag to create for consistency. (DLR)
  replace_line()
	- Make new_line_size and search_match_count size_t's, for
	  consistency. (DLR)
  do_replace_loop()
	- When moving to the next match, update the screen using
	  edit_refresh() instead of edit_redraw(), as the latter won't
	  work properly when we've replaced one or more instances of a
	  string in copy and haven't yet updated current->data to match
	  copy. (DLR)
  do_find_bracket()
	- Miscellaneous cleanups: rename variables for consistency, and
	  save the search direction and regexp setting in two bools
	  instead of one flags variable. (DLR)
- utils.c:
  num_of_digits()
	- Use a size_t instead of an int, and rename to digits(). (DLR)
  align()